# hello-lyrics

./: .gitignore  README.md  convert_data.py  pyproject.toml
log_dir/: projector_config.pbtxt
