[tool.poetry]
name = "hello-lyrics"
version = "0.1.0"
description = ""
authors = ["Seiichi Inoue <d35inou108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tensorboard = "^2.14.1"
pandas = "^2.1.1"
sentence-transformers = "^2.2.2"
fugashi = "^1.3.0"
unidic-lite = "^1.0.8"
numpy = "^1.26.0"
black = "^23.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
